fix: Resolved an issue where text overflow occurred in the confirmation
Resolved by adding the 'word-wrap: break-word' property

--- a/packages/shared-ui/src/components/Text/index.scss
+++ b/packages/shared-ui/src/components/Text/index.scss
@@ -2,7 +2,7 @@
 
 ._TEXT_ {
   font-size: $font-size-medium;
-  white-space: pre-wrap;
+  word-wrap: break-word;
   line-height: 1em;
   &.block {
     display: block;
